# stint

./: .gitignore  buf.gen.yaml  justfile  package.json  prek.toml
engine/: .gitignore  prek.toml  pyproject.toml
engine/src/: server.py
frontend/: app.config.ts  biome.json  bunfig.toml  package.json  prek.toml  tsconfig.json  uno.config.ts
frontend/rules/: route-component-arrow-function.yaml  route-component-missing-default-export.yaml  route-component-suffix.yaml
frontend/src/: app.tsx  entry-client.tsx
frontend/src/components/: brand.tsx  flight.tsx  logo.tsx
frontend/src/components/layout/: footer.tsx  layout.tsx  nav.tsx  theme-switch.tsx
frontend/src/components/ui/: button.tsx  navlink.tsx
frontend/src/lib/: theme.ts
frontend/src/routes/: [...404].tsx  index.tsx
proto/api/flight/v1/: flight.proto
proto/flight/v1/: flight.proto
