[project]
name = "engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-cors>=1.0.1",
    "connect-python>=0.7.1",
    "patito>=0.8.5",
    "polars>=1.37.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "uvicorn>=0.40.0",
    "psutil>=7.2.2",
    "starlette>=0.52.1",
]

[tool.setuptools.package-dir]
"" = "src"
flight = "gen/flight"

[tool.hatch.build.targets.wheel]
packages = ["src", "gen/flight"]

[tool.ty.environment]
root = ["./src", "./gen/"]
